gen/composer/v1/generator-errors.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking google-composer1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/composer/v1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
   --> gen/composer/v1/lib/src/lib.rs:701:13
    |
701 |             locations::LocationsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `environments::EnvironmentsActions`
   --> gen/composer/v1/lib/src/lib.rs:713:17
    |
713 |                 environments::EnvironmentsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `environments::EnvironmentsActions { /* fields */ }`?

error[E0423]: expected value, found struct `image_versions::ImageVersionsActions`
   --> gen/composer/v1/lib/src/lib.rs:717:17
    |
717 |                 image_versions::ImageVersionsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `image_versions::ImageVersionsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
   --> gen/composer/v1/lib/src/lib.rs:721:17
    |
721 |                 operations::OperationsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-composer1`.

To learn more, run the command again with --verbose.
